--- a/ChatProject/pom.xml
+++ b/ChatProject/pom.xml
@@ -168,6 +168,12 @@
 			<version>2.9.5</version>
 		</dependency>
 		
+		<dependency> 
+            <groupId>org.springframework</groupId> 
+            <artifactId>spring-websocket</artifactId> 
+            <version>${org.springframework-version}</version> 
+        </dependency>
+		
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
