--- a/ChatProject/pom.xml
+++ b/ChatProject/pom.xml
@@ -161,17 +161,58 @@
 			<version>3.6</version>
 		</dependency>
 		
-		<!-- json 데이터 바인딩을 위한 의존 라이브러리 -->
-		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-databind</artifactId>
-			<version>2.9.5</version>
+		<!-- Web Socket -->
+		<dependency> 
+		    <groupId>org.springframework</groupId> 
+		    <artifactId>spring-websocket</artifactId> 
+		    <version>${org.springframework-version}</version> 
+		</dependency>
+		<dependency> 
+		    <groupId>javax.websocket</groupId> 
+		    <artifactId>javax.websocket-api</artifactId> 
+		    <version>1.1</version> 
 		</dependency>
 		
-		<dependency> 
-            <groupId>org.springframework</groupId> 
-            <artifactId>spring-websocket</artifactId> 
-            <version>${org.springframework-version}</version> 
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.2</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>com.googlecode.json-simple</groupId>
+		    <artifactId>json-simple</artifactId>
+		    <version>1.1.1</version>
+		</dependency>
+		
+      <!-- Tiles 라이브러리 의존 관계 등록 시작 -->
+      <dependency>
+         <groupId>org.apache.tiles</groupId>
+         <artifactId>tiles-core</artifactId>
+         <version>3.0.8</version>
+      </dependency>
+      <dependency>
+         <groupId>org.apache.tiles</groupId>
+         <artifactId>tiles-extras</artifactId>
+         <version>3.0.8</version>
+      </dependency>
+      <dependency>
+         <groupId>org.apache.tiles</groupId>
+         <artifactId>tiles-servlet</artifactId>
+         <version>3.0.8</version>
+      </dependency>
+      <dependency>
+         <groupId>org.apache.tiles</groupId>
+         <artifactId>tiles-jsp</artifactId>
+         <version>3.0.8</version>
+      </dependency>
+      <!-- Tiles 라이브러리 의존 관계 등록 끝 -->
+		
+		<!-- json => Java (Object Mapper) -->
+        <dependency>
+	        <groupId>com.fasterxml.jackson.core</groupId>	
+	        <artifactId>jackson-databind</artifactId>
+	        <version>2.9.6</version>
         </dependency>
 		
 		<dependency>
